@@ -6,7 +6,6 @@ import com.dontforget.dontforget.domain.anniversary.AnniversaryRepository;
 import com.dontforget.dontforget.domain.notice.NoticeTarget;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 
 @DomainService
@@ -15,17 +14,22 @@ public class AlarmSearcher {
 
     private final AnniversaryRepository anniversaryRepository;
 
-    public List<NoticeTarget> findAlarmTargets() {
-        LocalDate today = LocalDate.now();
-        return anniversaryRepository.findAll().stream()
-            .flatMap(anniversary -> getSendMessageGroup(anniversary, today).stream())
-            .collect(Collectors.toList());
+    public List<NoticeTarget> findAlarmTargets(LocalDate time) {
+        return anniversaryRepository.findAll()
+            .stream()
+            .flatMap(anniversary -> getSendableNotices(anniversary, time).stream())
+            .toList();
     }
 
-    private List<NoticeTarget> getSendMessageGroup(Anniversary anniversary, LocalDate today) {
-        return anniversary.getNotices().stream()
-            .filter(notice -> notice.isSendNotice(today, anniversary.getSolarDate()))
+    private List<NoticeTarget> getSendableNotices(
+        Anniversary anniversary,
+        LocalDate time
+    ) {
+        return anniversary
+            .getNotices()
+            .stream()
+            .filter(notice -> notice.isSendable(time, anniversary.getSolarDate()))
             .map(notice -> NoticeTarget.of(anniversary, notice))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
